--- a/templates/setting.html
+++ b/templates/setting.html
@@ -40,8 +40,10 @@
                 <div class="grid lg:grid-cols-3 mt-12 gap-8">
                     <div>
                         <h3 class="text-xl mb-2"> General Setting</h3>
-                        <p></p>
                     </div>
+                    <!-- <div>
+                        <h3 class="text-xl mb-2"> View Posts</h3>
+                    </div> -->
                     <div class="bg-white rounded-md lg:shadow-lg shadow col-span-2">
 
                      <form action="" method="POST" enctype="multipart/form-data">
