--- a/templates/signin.html
+++ b/templates/signin.html
@@ -58,7 +58,7 @@
                 <form action="" method="POST">
                     {% csrf_token %}
                     <input type="text" name="username" placeholder="Username" class="bg-gray-200 mb-2 shadow-none dark:bg-gray-800" style="border: 1px solid #d3d5d8 !important;">
-                    <input type="text" name="password" placeholder="***********" class="bg-gray-200 mb-2 shadow-none dark:bg-gray-800" style="border: 1px solid #d3d5d8 !important;">
+                    <input type="password" name="password" placeholder="***********" class="bg-gray-200 mb-2 shadow-none dark:bg-gray-800" style="border: 1px solid #d3d5d8 !important;">
                     <div class="flex justify-between my-4">
                         <!-- <div class="checkbox">
                             <input type="checkbox" id="chekcbox1" checked>
@@ -86,7 +86,7 @@
                     <a href="#"> Terms</a>
                     <a href="#"> Privacy</a>
                 </div>
-                <p class="capitalize"> © copyright 2020 by socol</p>
+                <p class="capitalize"> © copyright 2023 by Solomon</p>
             </div>
         </div>
 
